--- a/03-fullstackApp/hr_frontend/package.json
+++ b/03-fullstackApp/hr_frontend/package.json
@@ -9,7 +9,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "bootstrap": "^5.1.1",
+    "toastr": "^2.1.4",
+    "react-router-dom": "^5.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
